# SovereignSec-AI-Auditor

./: .gitignore  BLOG_QUEUE.md  Dockerfile  EXPLAIN_LIKE_IM_10.md  IMPL_SPEC.md  INSIGHTS.md  LICENSE  README.md
bench/: bench_pipeline.py  bench_train.py  harness.py
bench/results/: CROSSFILE_PRECISION_REPORT.md  CROSSFILE_REPORT.md  FULL_ABLATION.md  HAYSTACK_REPORT.md  HAYSTACK_REPORT_base32b.md  HAYSTACK_REPORT_usercode32b.md  HAYSTACK_REPORT_v2.md  HAYSTACK_REPORT_v2cov.md  M3_REPORT.md  POSTCUTOFF_ABLATION.md  REPORT.md  benchmark.json  crossfile_audits.json  crossfile_judged.json  crossfile_prec_audits.json  crossfile_prec_report.json  crossfile_report.json  full_ablation.json  full_ablation_det.json  full_ablation_llm_base.json  full_ablation_llm_base_pc.json  full_ablation_llm_ft.json  full_ablation_llm_ft_pc.json  haystack_audits_base32b.json  haystack_audits_usercode32b.json  haystack_audits_v2.json  haystack_audits_v2cov.json  haystack_judged_base32b.json  haystack_judged_usercode32b.json  haystack_judged_v2.json  haystack_judged_v2cov.json  haystack_report.json  haystack_report_base32b.json  haystack_report_v2.json  (+6 more)
demo/: run_ablation.py  run_crossfile_eval.py  run_crossfile_precision.py  run_full_ablation.py  run_full_ablation.sh  run_haystack_eval.py
docs/: FAQ.md
ft-rig/eval/: README.md  pyproject.toml  run_baseline.py
ft-rig/eval/sscai_eval/: __init__.py  contamination.py  datasets.py  metrics.py  pipeline.py  rungs.py  schema.py
ft-rig/eval/tests/: test_metrics.py
sscai/: __init__.py  __main__.py  cli.py
tests/: test_m2_pipeline.py
(+67 files in other folders)
